pushing some changes after meeting with an engineer at work to help me with positioning in tthe CSS. There was some styling changes I made with bootstrap that weren't working and I needed her help

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,21 @@ main {
 
 }
 
+.forecast-cards {
+    gap:15px;
+}
+
 
 .bg-forecast-cards {
-    background-color: goldenrod !important;
+    background-color: darkblue !important;
+    color: white;
+    text-align:left
+}
+
+.daily-icon {
+    width: 10%;
+}
+
+.forecast-icons {
+    width: 40% !important;
 }
